Cleanup code and fix small alignment issues.

--- a/Project1/stylesheet.css
+++ b/Project1/stylesheet.css
@@ -7,6 +7,24 @@ html, body{
     font-style: italic;
 }
 
+.floatLeft{ /*Generic shortcut to float items left*/
+    float: left;
+}
+
+.floatRight{ /*Generic shortcut to float items right*/
+    float: right;
+}
+
+.modernBlue{ /*Quick select of Modern Developer blue*/
+    color: #74A1E9;
+}
+
+.modernGray{ /*Quick select of Modern Developer gray*/
+    color: #EFF1F2;
+}
+
+/*END Generic Options*/
+
 input { /*Add pencil to inputs, remove border*/
     background-image: url(images/pencil.png);
     background-position: right;
@@ -15,7 +33,7 @@ input { /*Add pencil to inputs, remove border*/
 }
 
 .greyBack{ /*Change Background to gray*/
-    background-color: #EFF1F2;;
+    background-color: #EFF1F2;
 }
 
 /*Selection Box Options*/
@@ -34,22 +52,6 @@ option{
     text-align: center;
 }
 /*END Select Options*/
-
-.floatLeft{ /*Generic shortcut to float items left*/
-    float: left;
-}
-
-.floatRight{ /*Generic shortcut to float items right*/
-    float: right;
-}
-
-.modernBlue{ /*Quick select of Modern Developer blue*/
-    color: #74A1E9;
-}
-
-.modernGray{ /*Quick select of Modern Developer gray*/
-    color: #EFF1F2;
-}
 
 .line{ /*Gray line used to seperate the divs.  I use a straight, gray line
     and modify the height.  See /images/line.png*/
@@ -139,13 +141,15 @@ option{
 
 #defineRoles span{ /*Names of people*/
     width: 50%;
+    font-size: 14px;
+    padding-top: 10px; /*Fixing Text alignment with input*/
 }
 
 #defineRoles input{
     font-size: 14px;
     border: none;
     width: 50%;
-    padding: inherit;
+    padding-top: 0; /*Fixing Text alignment with input*/
 }
 /*END Options for User Control ROLES div*/
 
